--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 OPENAI_API_KEY="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"
+GOOGLE_API_KEY = 'AIzaSyCiR-wcU-IbaMcBL51tu2QaYnCaUH9_uk4'
+GOOGLE_APPLICATION_CREDENTIALS = 'json-config.json'
