--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY='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'
 GOOGLE_API_KEY = 'AIzaSyCiR-wcU-IbaMcBL51tu2QaYnCaUH9_uk4'
 GOOGLE_APPLICATION_CREDENTIALS = 'json-config.json'
